Update Lesson 10 - GitHub.html

--- a/Lesson 10 - GitHub.html
+++ b/Lesson 10 - GitHub.html
@@ -17,9 +17,10 @@
   </header>
 
   <main>
+    
     <div class="component d-flex p-2 m-auto gap-2 text-center shadow rounded-3">
 
-      <div class="p-4 d-flex flex-column justify-content-center gap-3">
+      <div class="p-4 shadow d-flex flex-column justify-content-center gap-3">
         <div>
           <img src="./assets/img/img.jpg" style="width: 120px; border-radius: 100px;" alt="">
         </div>
@@ -32,25 +33,25 @@
 
         </div>
       </div>
-      <div class="gap-2 d-flex flex-column justify-content-between">
+      <div class=" shadow gap-2 d-flex flex-column justify-content-between">
         <div class="gap-2 d-flex flex-wrap justify-content-between" style="width: 100%; height: 100%;">
 
-          <div class="bg-light rounded-2 d-flex p-2 flex-column justify-content-center flex-grow-1 gap-1">
+          <div class=" shadow bg-light rounded-2 d-flex p-2 flex-column justify-content-center flex-grow-1 gap-1">
             <div class="fw-bold text-success">1756</div>
             <div class="text-secondary">contributions</div>
           </div>
-          <div class="bg-light rounded-2 d-flex p-2 flex-column justify-content-center flex-grow-1 gap-1">
+          <div class=" shadow bg-light rounded-2 d-flex p-2 flex-column justify-content-center flex-grow-1 gap-1">
             <div class="fw-bold text-success">777</div>
             <div class="text-secondary">followers</div>
           </div>
-          <div class="bg-light rounded-2 d-flex p-2 flex-column justify-content-center flex-grow-1 gap-1">
+          <div class="shadow bg-light rounded-2 d-flex p-2 flex-column justify-content-center flex-grow-1 gap-1">
             <div class="fw-bold text-success">32</div>
             <div class="
                       text-secondary">repositories</div>
           </div>
 
         </div>
-        <div class=" p-3 bg-light rounded-2 justify-content-center d-flex flex-column"
+        <div class="shadow p-3 bg-light rounded-2 justify-content-center d-flex flex-column"
           style="width: 100%; height: 100%;">
           <h4>Приходько Михаил</h4>
           <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, minus. Non fugit
